--- a/Python Lessons/P1_Introduction_to_Python.ipynb
+++ b/Python Lessons/P1_Introduction_to_Python.ipynb
@@ -21,7 +21,7 @@
         "id": "Tm-MoyHSpZTt"
       },
       "source": [
-        "# Introduction to Python: Part 1\n",
+        "# Introduction to Python: eePart 1\n",
         "\n",
         "In the AI & Machine Learning club, we will be using Python to code our projects! \n",
         "\n",
